# graph-progression

./: .flake8  404.html  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: code_quality_checks.yml
docs/: index.md
docs/samples/: README.md
graph_progression/: __init__.py  generators.py  progressors.py  selectors.py
progression/: progressors.py
samples/: index.html
search/: search_index.json
tests/: test_generators.py  test_progressors.py  test_selectors.py
